# python-starter

./: .gitignore  Makefile  README.md  main.py  mise.toml  pyproject.toml
.github/workflows/: generate_tag.yml  python-app.yml  python-pr.yml
python_starter/: main.py
python_starter/application_setting/: my_credential.py  my_logger.py
src/: main.py  user.py
src/python_starter/: main.py
tests/: test_main.py  test_user.py
