[project]
name = "python-starter"
version = "2.0.0"
description = "Template for Python project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "types-requests>=2.32.4.20250611",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.16.1",
    "pytest>=8.4.1",
    "types-pyyaml>=6.0.12.20250516",
]


[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = "src"
